--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet" />
-    <title>Vite + React + TS</title>
+    <title>React Todo App</title>
   </head>
   <body>
     <div id="root"></div>
